updated README (use 2g ram for sbt); removed javaOption in build